Fixes #1: keep a non-global state API restructured to take a pointer to a state struct (libifc_handle_t*). Calling application obtains this pointer by calling libifc_open(), and frees/clears it by calling libifc_close(ptr). Calling application may use as many libifc_handle_t* as it wishes. Intended use case is one per thread in a multithreaded application. Calling application now use libifc_err_errtype(ptr), libifc_err_errno(ptr) and libifc_err_ioctlreq(ptr) to retrieve error information. Exposed some internal APIs via libifconfig_internal.h. Currently intended for use by source files in libifconfig only, therefore not installed to the usual places.

--- a/Makefile.base
+++ b/Makefile.base
@@ -3,10 +3,10 @@
 LIB=    ifconfig
 SHLIBDIR?= /lib
 SHLIB_MAJOR= 1
-SRCS=   libifconfig.c libifconfig_socketcache.c
+SRCS=   libifconfig.c libifconfig_internal.c
 
 INCSDIR=	${INCLUDEDIR}/libifconfig
-INCS=   libifconfig.h libifconfig_socketcache.h
+INCS=   libifconfig.h
 
 #MAN=    libifconfig.3
 
