--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -1,2 +1,2 @@
 default:
-	$(CC) -Wall -fPIC -shared -o libifconfig.so libifconfig.c libifconfig_socketcache.c
+	$(CC) -Wall -fPIC -shared -o libifconfig.so libifconfig.c libifconfig_internal.c
