Added new example program to set interface MTU. Did a style(9) pass using uncrustify on example programs.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,2 +1,3 @@
 default:
-	$(CC) -Wall -fPIC -lifconfig -o example_setdescription setdescription.c
+	$(CC) -Wall -fPIC -lifconfig -g -o example_setdescription setdescription.c
+	$(CC) -Wall -fPIC -lifconfig -g -o example_setmtu setmtu.c
