--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,3 +1,4 @@
 default:
 	$(CC) -Wall -fPIC -lifconfig -g -o example_setdescription setdescription.c
 	$(CC) -Wall -fPIC -lifconfig -g -o example_setmtu setmtu.c
+	$(CC) -Wall -fPIC -lifconfig -g -o example_ifdestroy ifdestroy.c
