Add initial support for creating interfaces. Issue #12 Some interfaces need special handling, and this is not implemented yet.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -2,3 +2,4 @@ default:
 	$(CC) -Wall -fPIC -lifconfig -g -o example_setdescription setdescription.c
 	$(CC) -Wall -fPIC -lifconfig -g -o example_setmtu setmtu.c
 	$(CC) -Wall -fPIC -lifconfig -g -o example_ifdestroy ifdestroy.c
+	$(CC) -Wall -fPIC -lifconfig -g -o example_ifcreate ifcreate.c
