--- a/Makefile.base
+++ b/Makefile.base
@@ -1,17 +1,17 @@
 # $FreeBSD$
 
-PACKAGE=lib${LIB}
-LIB=    ifconfig
+PACKAGE=	lib${LIB}
+LIB=		ifconfig
 
-SHLIBDIR?= /lib
-SHLIB_MAJOR= 1
-SRCS=   src/libifconfig.c src/libifconfig_internal.c
+SHLIBDIR?=	/lib
+SHLIB_MAJOR=	1
+SRCS=		src/libifconfig.c src/libifconfig_internal.c
 
-INCSDIR=	${INCLUDEDIR}/libifconfig
-INCS=   src/libifconfig.h
+INCSDIR=	${INCLUDEDIR}
+INCS=		src/libifconfig.h
 
-#MAN=    libifconfig.3
+#MAN=		libifconfig.3
 
-CFLAGS+=-I${.CURDIR}
+CFLAGS+= -I${.CURDIR}
 
 .include <bsd.lib.mk>
