--- a/Makefile.base
+++ b/Makefile.base
@@ -5,10 +5,10 @@ LIB=		ifconfig
 
 SHLIBDIR?=	/lib
 SHLIB_MAJOR=	1
-SRCS=		src/libifconfig.c src/libifconfig_internal.c
+SRCS=		libifconfig.c libifconfig_internal.c
 
 INCSDIR=	${INCLUDEDIR}
-INCS=		src/libifconfig.h
+INCS=		libifconfig.h
 
 #MAN=		libifconfig.3
 
