--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,3 +3,5 @@ default:
 	$(CC) -Wall -fPIC -lifconfig -g -o example_setmtu setmtu.c
 	$(CC) -Wall -fPIC -lifconfig -g -o example_ifdestroy ifdestroy.c
 	$(CC) -Wall -fPIC -lifconfig -g -o example_ifcreate ifcreate.c
+clean:
+	rm -f example_*
