Now also tests whether libifc builds in FreeBSD base

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 before_script:
  - ln -s ./Makefile.standalone Makefile
  - which uncrustify
+ - which doxygen
+ - which tree
  - uname -a
 
 stages:
@@ -15,10 +17,19 @@ buildlib:
   - freebsd
  script:
   - make
+  - tree stage/libifc
  artifacts:
   name: "libifc"
   paths:
    - stage/libifc/
+
+buildlib_in_base:
+ stage: build
+ tags:
+  - shell
+  - freebsd
+ script:
+  make -f Makefile.ci buildlibinbase
 
 verify_style9:
  stage: test
@@ -26,7 +37,7 @@ verify_style9:
   - shell
   - uncrustify
  script:
-  - make checkstyle
+  - make -f Makefile.ci checkstyle
 
 doxygen:
  stage: release
@@ -38,3 +49,14 @@ doxygen:
  artifacts:
   paths:
    - stage/doxygen/
+
+freebsd_base_dist:
+ stage: release
+ tags:
+  - shell
+ script:
+  - make -f Makefile.ci createfreebsdtree
+  - tree stage/freebsdsrc
+ artifacts:
+  paths:
+   - stage/freebsdsrc
