Makefile.base now disables building of shared library, to strongly indicate this is not production ready. CI now builds with both clang and gcc Makefile.standalone: - Now also define -Wextra, and promote all warnings to error. Good for CI and development :) - Now specify to use gnu99 standard, which seems to be the default when building in FreeBSD base. Patch file applied to FreeBSD base: Now also tells /usr/src/lib/Makefile to build libifc.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,16 +10,35 @@ stages:
  - test
  - release
 
-buildlib:
+buildlib_with_clang:
  stage: build
  tags: 
   - shell
   - freebsd
+  - clang
  script:
-  - make
+  - which clang
+  - clang --version
+  - make -f Makefile.ci buildwithclang
   - tree stage/libifc
  artifacts:
-  name: "libifc"
+  name: "libifc-clang"
+  paths:
+   - stage/libifc/
+
+buildlib_with_gcc:
+ stage: build
+ tags: 
+  - shell
+  - freebsd
+  - gcc
+ script:
+  - which gcc
+  - gcc --version
+  - make -f Makefile.ci buildwithgcc
+  - tree stage/libifc
+ artifacts:
+  name: "libifc-gcc"
   paths:
    - stage/libifc/
 
