--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -1,8 +1,8 @@
 default:
-	rm -Rf stage/libifc
-	mkdir -p stage/libifc
-	$(CC) -std=gnu99 -Wall -Wextra -Werror -fPIC -shared -o stage/libifc/libifc.so src/libifc.c src/libifc_internal.c
-	cp src/libifc.h stage/libifc/
+	rm -Rf stage/libifconfig
+	mkdir -p stage/libifconfig
+	$(CC) -std=gnu99 -Wall -Wextra -Werror -fPIC -shared -o stage/libifconfig/libifconfig.so src/libifconfig.c src/libifconfig_internal.c
+	cp src/libifconfig.h stage/libifconfig/
 clean:
 	rm -Rf stage
 doxygen:
