--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,7 +1,7 @@
 default:
-	$(CC) -Wall -fPIC -lifc -g -o example_setdescription setdescription.c
-	$(CC) -Wall -fPIC -lifc -g -o example_setmtu setmtu.c
-	$(CC) -Wall -fPIC -lifc -g -o example_ifdestroy ifdestroy.c
-	$(CC) -Wall -fPIC -lifc -g -o example_ifcreate ifcreate.c
+	$(CC) -Wall -fPIC -lifconfig -g -o example_setdescription setdescription.c
+	$(CC) -Wall -fPIC -lifconfig -g -o example_setmtu setmtu.c
+	$(CC) -Wall -fPIC -lifconfig -g -o example_ifdestroy ifdestroy.c
+	$(CC) -Wall -fPIC -lifconfig -g -o example_ifcreate ifcreate.c
 clean:
 	rm -f example_*
