--- a/tools/uncrustify_freebsd.cfg
+++ b/tools/uncrustify_freebsd.cfg
@@ -256,7 +256,7 @@ nl_namespace_brace                       = ignore
 nl_template_class                        = ignore
 nl_class_brace                           = ignore
 nl_class_init_args                       = ignore
-nl_func_type_name                        = ignore
+nl_func_type_name                        = add
 nl_func_type_name_class                  = ignore
 nl_func_scope_name                       = ignore
 nl_func_proto_type_name                  = ignore
