Missed changing examples properly.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,3 +1,4 @@
+# $FreeBSD$
 default:
 	$(CC) -Wall -fPIC -lifconfig -g -o example_setdescription setdescription.c
 	$(CC) -Wall -fPIC -lifconfig -g -o example_setmtu setmtu.c
