Makefile.base: Mark library as private. Suggested by bapt, reviewed by kp, patch submitted by AllanJude. Also, now that it's marked private, it should be safe to build shared library.

--- a/Makefile.base
+++ b/Makefile.base
@@ -2,8 +2,7 @@
 
 PACKAGE=	lib${LIB}
 LIB=		ifconfig
-# Don't build shared library, for now.
-NO_PIC= 
+PRIVATELIB=	true
 
 SHLIBDIR?=	/lib
 SHLIB_MAJOR=	1
