--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,5 +4,7 @@ default:
 	$(CC) -Wall -fPIC -lifconfig -g -o example_setmtu setmtu.c
 	$(CC) -Wall -fPIC -lifconfig -g -o example_ifdestroy ifdestroy.c
 	$(CC) -Wall -fPIC -lifconfig -g -o example_ifcreate ifcreate.c
+	$(CC) -Wall -fPIC -lifconfig -g -o example_ifcreatevlan ifcreatevlan.c
+	$(CC) -Wall -fPIC -lifconfig -g -o example_ifchangevlan ifchangevlan.c
 clean:
 	rm -f example_*
