Rewrite examples/Makefile to be more usable for standalone builds

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,10 +1,9 @@
 # $FreeBSD$
-default:
-	$(CC) -Wall -fPIC -lifconfig -g -o example_setdescription setdescription.c
-	$(CC) -Wall -fPIC -lifconfig -g -o example_setmtu setmtu.c
-	$(CC) -Wall -fPIC -lifconfig -g -o example_ifdestroy ifdestroy.c
-	$(CC) -Wall -fPIC -lifconfig -g -o example_ifcreate ifcreate.c
-	$(CC) -Wall -fPIC -lifconfig -g -o example_ifcreatevlan ifcreatevlan.c
-	$(CC) -Wall -fPIC -lifconfig -g -o example_ifchangevlan ifchangevlan.c
-clean:
-	rm -f example_*
+PROGS=ifchangevlan ifcreate ifcreatevlan ifdestroy setdescription setmtu
+
+CFLAGS+=	-I../stage/libifconfig -L../stage/libifconfig
+LDADD=	-lifconfig
+MAN=
+WARNS?=	6
+
+.include <bsd.progs.mk>
