Finish printing inet6 addresses, including flags etc

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -1,7 +1,7 @@
 default:
 	rm -Rf stage/libifconfig
 	mkdir -p stage/libifconfig
-	$(CC) -std=gnu99 -Wall -Wextra -Werror -fPIC -shared -o stage/libifconfig/libifconfig.so src/libifconfig.c src/libifconfig_internal.c
+	$(CC) -std=gnu99 -Wall -Wextra -Werror -fPIC -shared -o stage/libifconfig/libifconfig.so src/libifconfig.c src/libifconfig_internal.c src/libifconfig_media.c src/libifconfig_inet6.c
 	cp src/libifconfig.h stage/libifconfig/
 clean:
 	rm -Rf stage
