--- a/Makefile.base
+++ b/Makefile.base
@@ -6,7 +6,7 @@ PRIVATELIB=	true
 
 SHLIBDIR?=	/lib
 SHLIB_MAJOR=	1
-SRCS=		libifconfig.c libifconfig_internal.c
+SRCS=		libifconfig.c libifconfig_internal.c libifconfig_inet6.c
 
 INCSDIR=	${INCLUDEDIR}
 INCS=		libifconfig.h
